[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.6.12"
solana-validator = { version = "1.6.12", optional = true }

[features]
test-bpf = ["solana-validator"]

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.12"
solana-sdk = "1.6.12"

[lib]
crate-type = ["cdylib", "lib"]
